# structure-from-motion

./: .gitignore  Cargo.toml  README.md  gen_shaders.sh
.cargo/: config.toml
.github/: README.md
shaders/src/: gaussian.frag  gaussian.vert
src/: camera.rs  main.rs  pose.rs  render_state.rs  sfm.rs
