[package]
name = "sfm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
flexi_logger = "0.27"
log = "0.4"
itertools = "0.12"

opencv = "0.88"

morrigu = { git = "https://github.com/TableauBits/morrigu-rs", rev = "dd8d336d26c361a8b244afb4a047b093d9e687af", features = ["egui"] }
winit_input_helper = "0.15"

